--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
                 }
             }
         </style>	
-        <!--Title of Page--><title>Coming Soon</title>
+        <!--Title of Page--><title>Мы скоро вернемся/title>
     </head>	
     <body>
         <div id="main"> <!--Start Page Container-->
             <img src="logo.png" alt=""> <!--Logo-->
-            <h1>Company Name</h1>
-            <h2>Our website is currently under construction. </h2>
+            <h1>СПб ART HOUSE</h1>
+            <h2>Финишное выравнивание стен и потолков</h2>
             <div id="progress"><div id="fill"><div id="barpercent"><h3>35%</h3></div></div></div>
         </div> <!--End Page Container-->
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css' property='stylesheet'> <!--Define Google Fonts-->
