--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 }
             }
         </style>	
-        <!--Title of Page--><title>Мы скоро вернемся/title>
+        <!--Title of Page--><title>Мы скоро вернемся</title>
     </head>	
     <body>
         <div id="main"> <!--Start Page Container-->
