--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
         <!--Title of Page--><title>Мы скоро вернемся</title>
     </head>	
     <body>
-        <div id="main"> <!--Start Page Container-->
-            <img src="logo.png" alt=""> <!--Logo-->
+       <!--  <div id="main">  
+            <img src="logo.png" alt="">  
             <h1>СПб ART HOUSE</h1>
             <h2>Финишное выравнивание стен и потолков в Санкт-Петербурге</h2>
-           <!-- <div id="progress"><div id="fill"><div id="barpercent"><h3>35%</h3></div></div></div>   -->
-        </div> <!--End Page Container-->
+           <div id="progress"><div id="fill"><div id="barpercent"><h3>35%</h3></div></div></div>   -->
+        </div>  
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css' property='stylesheet'> <!--Define Google Fonts-->
         <div class="uCalc_155405"></div><script> var widgetOptions155405 = { bg_color: "transparent" }; (function() { var a = document.createElement("script"); a.async = true; a.src = (document.location.protocol == "https:" ? "https:" : "http:") + "//ucalc.pro/api/widget.js?id=155405&t="+Math.floor(new Date()/1800000); document.getElementsByTagName("head")[0].appendChild(a) })();</script>
     </body>
