--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
                 }
             }
         </style>	
-        <!--Title of Page--><title>Мы скоро вернемся</title>
+        <!--Title of Page--><title>Калькулятор натяжных потолков</title>
     </head>	
     <body>
-       <!--  <div id="main">  
+       <div id="main">  
             <img src="logo.png" alt="">  
             <h1>СПб ART HOUSE</h1>
-            <h2>Финишное выравнивание стен и потолков в Санкт-Петербурге</h2>
+            <!--  <h2>Финишное выравнивание стен и потолков в Санкт-Петербурге</h2>
            <div id="progress"><div id="fill"><div id="barpercent"><h3>35%</h3></div></div></div>   -->
         </div>  
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css' property='stylesheet'> <!--Define Google Fonts-->
